# adaptix_tagged_union

./: .flake8  .gitignore  pyproject.toml  test.py
src/: rule.py  tagged.py  typings.py
src/actions/: __init__.py  execute.py  log.py
src/conditions/: __init__.py  base.py  composition.py  kind.py  logic.py  operator.py
src/expressions/: __init__.py  base.py
